--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,10 +29,12 @@ jobs:
         run: go mod verify
 
       - name: Run go vet
-        run: make vet
+        run: go vet ./...
 
       - name: Run staticcheck
-        run: make lint
+        uses: dominikh/staticcheck-action@v1.3.0
+        with:
+          version: "2023.1.6"
 
   build-and-push:
     needs: test
