--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,6 +31,10 @@ jobs:
       - name: Run go vet
         run: make vet
 
+      - name: Test
+        run: |
+          make test
+  
       - name: Lint
         run: |
           make lint
