--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,38 @@ env:
 jobs:
   app-testing:
     runs-on: ubuntu-latest
+    services:
+      vault:
+        image: hashicorp/vault
+        ports:
+          - 8200:8200
+        env:
+          VAULT_LOCAL_CONFIG: |
+            {
+              "storage": {
+                "file": {
+                  "path": "/vault/file"
+                }
+              },
+              "listener": [
+                {
+                  "tcp": {
+                    "address": "0.0.0.0:8200",
+                    "tls_disable": true
+                  }
+                }
+              ],
+              "default_lease_ttl": "168h",
+              "max_lease_ttl": "720h",
+              "ui": true
+            }
+        options: >-
+          --cap-add=IPC_LOCK
+          --health-cmd="vault status"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
