--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,9 @@ jobs:
         ports:
           - 8200:8200
         env:
+          VAULT_ADDR: "http://localhost:8200"
+          VAULT_API_ADDR: "http://localhost:8200"
+          VAULT_ADDRESS: "http://localhost:8200"
           VAULT_LOCAL_CONFIG: |
             {
               "storage": {
