add vault container for cicd testing

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,29 +15,30 @@ jobs:
     services:
       vault:
         image: hashicorp/vault
+        ports:
+          - 8201:8200
         env:
           VAULT_ADDR: "http://localhost:8200"
           VAULT_API_ADDR: "http://localhost:8200"
           VAULT_ADDRESS: "http://localhost:8200"
           VAULT_LOCAL_CONFIG: |
-            {
-              "storage": {
-                "file": {
-                  "path": "/vault/file"
-                }
-              },
-              "listener": [
-                {
-                  "tcp": {
-                    "address": "0.0.0.0:8200",
-                    "tls_disable": true
-                  }
-                }
-              ],
-              "default_lease_ttl": "168h",
-              "max_lease_ttl": "720h",
-              "ui": true
+            ui = true
+            disable_mlock = "true"
+
+            storage "file" {
+              path = "/vault/data/"
             }
+
+
+            listener "tcp" {
+              address = "[::]:8200"
+              tls_disable = "true"
+              # tls_cert_file = "/certs/server.crt"
+              # tls_key_file  = "/certs/server.key"
+            }
+
+            api_addr = "http://localhost:8200"
+            cluster_addr = "http://localhost:8201"
         options: >-
           --cap-add=IPC_LOCK
           --health-cmd="vault status"
