--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,13 +15,13 @@ jobs:
     services:
       vault:
         ports:
-          - "82000:82000"
-          - "82010:82010"
+          - "8200:8200"
+          - "8201:8201"
         image: hashicorp/vault
         env:
-          VAULT_ADDR: "http://localhost:82000"
-          VAULT_API_ADDR: "http://localhost:82000"
-          VAULT_ADDRESS: "http://localhost:82000"
+          # VAULT_ADDR: "http://localhost:8200"
+          # VAULT_API_ADDR: "http://localhost:8200"
+          # VAULT_ADDRESS: "http://localhost:8200"
           VAULT_LOCAL_CONFIG: |
             ui = true
             disable_mlock = "true"
@@ -32,14 +32,14 @@ jobs:
 
 
             listener "tcp" {
-              address = "[::]:82000"
+              address = "[::]:8200"
               tls_disable = "true"
               # tls_cert_file = "/certs/server.crt"
               # tls_key_file  = "/certs/server.key"
             }
 
-            api_addr = "http://localhost:82000"
-            cluster_addr = "http://localhost:82010"
+            api_addr = "http://localhost:8200"
+            cluster_addr = "http://localhost:8201"
         options: >-
           --cap-add=IPC_LOCK
           --health-cmd="vault status"
