--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,19 +21,16 @@ jobs:
         image: hashicorp/vault
         env:
           VAULT_LOCAL_CONFIG: |
-            ui = true
+            ui = false
             disable_mlock = "true"
 
             storage "file" {
               path = "/vault/data/"
             }
 
-
             listener "tcp" {
               address = "[::]:8212"
               tls_disable = "true"
-              # tls_cert_file = "/certs/server.crt"
-              # tls_key_file  = "/certs/server.key"
             }
 
             api_addr = "http://localhost:8212"
