add vault container for cicd testing

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,7 +50,7 @@ jobs:
         run: |
           cd tests/vault
           mkdir -p ./data
-          docker-compose up -d
+          docker compose up -d
           cd -
 
       - name: Set up Go
