add vault container for cicd testing

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,9 +39,7 @@ jobs:
         run: make vet
 
       - name: Test
-        run: |
-          make test
-          rm -rf tests
+        run: make test
   
       - name: Lint
         # fixing some issues
