--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,8 +16,8 @@ sonar.go.coverage.reportPaths=coverage.out
 sonar.go.tests.reportPaths=test-report.json
 
 # Exclusions
-sonar.exclusions=**/*_test.go,**/vendor/**,**/testdata/**,**/*.pb.go,**/mock_*.go,**/mocks/**,**/tests/**
-sonar.test.exclusions=**/vendor/**,**/tests/**
+sonar.exclusions=**/*_test.go,**/vendor/**,**/testdata/**,**/*.pb.go,**/mock_*.go,**/mocks/**
+sonar.test.exclusions=**/vendor/**
 
 # Test configuration
 sonar.tests=.
